Fix 28 System.Runtime.Extensions test failures.
  SetEnvironmentVariable(string, string)
  GetEnvironmentVariables()

  GetEnvironmentVariable(string, target)
  SetEnvironmentVariable(string, string, target)
  GetEnvironmentVariables(target)

   Where target = Target.Process.

   Target.Machine/User will come up next...

Code is mostly cribbed from CoreCLR with some
minor call tree reorg with an eye towards
optimizing out the copies upon copies in
the GetEnvironmentStrings() path.

Code is written with an eye towards
moving to shared partition (though I don't
have time budgeted for that myself.)

Am not doing the Unix versions on CoreRT.
Focus is on getting tests on Project N up.

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Internal\Runtime\Augments\DynamicDelegateAugments.cs" />
     <Compile Include="Internal\Runtime\Augments\EnumInfo.cs" />
     <Compile Include="Internal\Runtime\Augments\EnvironmentAugments.cs" />
+    <Compile Include="Internal\Runtime\Augments\EnvironmentAugments.CoreRT.cs" />
     <Compile Condition="'$(TargetsWindows)'=='true'" Include="Internal\Runtime\Augments\EnvironmentAugments.Windows.cs" />
     <Compile Condition="'$(TargetsUnix)'=='true'" Include="Internal\Runtime\Augments\EnvironmentAugments.Unix.cs" />
     <Compile Include="Internal\Runtime\Augments\RuntimeThread.cs" />
