--- a/src/ILVerify/src/ILVerify.csproj
+++ b/src/ILVerify/src/ILVerify.csproj
@@ -268,6 +268,7 @@
   <ItemGroup>
     <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.0.0" />
     <PackageReference Include="System.Reflection.Metadata" Version="1.4.1" />
+    <PackageReference Include="System.CommandLine" Version="0.1.0-e160909-1" />
   </ItemGroup>
 
 </Project>
