Generate runtime interop data for structs and delegates
In order to make the Marshal APIs to work, this change generates runtime
interop data for the following cases:

. Delegates with UnmanagedFunctionPointerAttribute
. Structs with StructLayoutAttribute
. Generic parameters for Marshal generic API calls which are struct or
delegate

--- a/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
+++ b/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Compiler\DependencyAnalysis\CallingConventionConverterKey.cs" />
     <Compile Include="Compiler\DependencyAnalysis\CodeBasedDependencyAlgorithm.cs" />
     <Compile Include="Compiler\DependencyAnalysis\DelegateMarshallingStubMapNode.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\StructMarshallingStubMapNode.cs" />    
     <Compile Include="Compiler\DependencyAnalysis\GenericVirtualMethodTableNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\InterfaceGenericVirtualMethodTableNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\IObjectDumper.cs" />
