Add support for new native metadata blob for autonomous stack trace formatting
This change adds basic scaffolding for autonomous stack trace formatting
in the absence of PDB / DIA. The new assembly System.Private.StackTraceMetadata
contains the logic for accessing the new blob and formatting method names
based on metadata, the rest of the change basically wires up this logic to the
actual Corelib stack trace generator.

[tfs-changeset: 1660918]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Internal\Runtime\Augments\TypeLoaderCallbacks.cs" />
     <Compile Include="Internal\Runtime\Augments\InteropCallbacks.cs" />
     <Compile Include="Internal\Runtime\Augments\DesktopSupportCallbacks.cs" />
+    <Compile Include="Internal\Runtime\Augments\StackTraceMetadataCallbacks.cs" />
     <Compile Include="Internal\Runtime\Augments\DynamicDelegateAugments.cs" />
     <Compile Include="Internal\Runtime\Augments\EnumInfo.cs" />
     <Compile Include="Internal\Runtime\Augments\EnvironmentAugments.cs" />
