[ILVerify] Added initial support for Array<T> (#3818)
* Added initial support for Array<T>
- this fixes 3817

--- a/src/ILVerify/src/ILVerify.csproj
+++ b/src/ILVerify/src/ILVerify.csproj
@@ -13,6 +13,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="ILImporter.Verify.cs" />
     <Compile Include="ILImporter.StackValue.cs" />
+    <Compile Include="SimpleArrayOfTRuntimeInterfacesAlgorithm.cs" />
     <Compile Include="SimpleTypeSystemContext.cs" />
     <Compile Include="VerifierError.cs" />
   </ItemGroup>
