Delete ToolsVersion attribute from msbuild files
The latest project templates do not have it, and it is only good for generating warnings like the following in the detailed build log:

Project file contains ToolsVersion="4.0". This toolset may be unknown or missing, in which case you may be able to resolve this by installing the appropriate version of MSBuild, or the build may have been forced to a particular ToolsVersion for policy reasons. Treating the project as if it had ToolsVersion="14.0". For more information, please see http://go.microsoft.com/fwlink/?LinkId=293424.

[tfs-changeset: 1662024]

--- a/src/packaging/packages.targets
+++ b/src/packaging/packages.targets
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <Target Name="BuildNuGetPackages" AfterTargets="Build">
         <!-- Property needed for creating nupkgs -->
         <PropertyGroup>
@@ -282,8 +281,7 @@
 }]]>
                 </RuntimeJsonLines>
                 <RedirFile>$(ProductPackageDir)/%(RedirPackage).nuspec</RedirFile>
-                <RedirLines><![CDATA[<?xml version="1.0"?>
-<package>
+                <RedirLines><![CDATA[<package>
   <metadata>
     <id>%(RedirPackage)</id>
     %(NuSpecPackageMetadata)
@@ -295,8 +293,7 @@
 ]]>
                 </RedirLines>
                 <PlatformFile>$(ProductPackageDir)/%(PlatformPackage).nuspec</PlatformFile>
-                <PlatformLines><![CDATA[<?xml version="1.0"?>
-<package>
+                <PlatformLines><![CDATA[<package>
   <metadata>
     <id>%(PlatformPackage)</id>
     %(NuSpecPackageMetadata)
