--- a/src/ILCompiler.MetadataWriter/src/ILCompiler.MetadataWriter.csproj
+++ b/src/ILCompiler.MetadataWriter/src/ILCompiler.MetadataWriter.csproj
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
     <ProjectGuid>{D66338D4-F9E4-4051-B302-232C6BFB6EF6}</ProjectGuid>
