--- a/src/ILCompiler.MetadataWriter/src/ILCompiler.MetadataWriter.targets
+++ b/src/ILCompiler.MetadataWriter/src/ILCompiler.MetadataWriter.targets
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <CommonSourcePath>$(MSBuildThisFileDirectory)..\..\Common\src\</CommonSourcePath>
     <NativeFormatCommonPath>$(CommonSourcePath)Internal\NativeFormat</NativeFormatCommonPath>
