--- a/src/System.Private.Reflection.Execution/src/System.Private.Reflection.Execution.Experimental.csproj
+++ b/src/System.Private.Reflection.Execution/src/System.Private.Reflection.Execution.Experimental.csproj
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
     <AssemblyName>System.Private.Reflection.Execution.Experimental</AssemblyName>
     <ProjectGuid>{B48AF2B7-7205-4449-9DFF-44936490E8A5}</ProjectGuid>
