--- a/tests/CoreCLR/runtest/dir.targets
+++ b/tests/CoreCLR/runtest/dir.targets
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" InitialTargets="CheckForBuildTools" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project InitialTargets="CheckForBuildTools" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   
   <Target Name="CheckForBuildTools">
     <Error Condition="!Exists('$(ToolsDir)')"
