--- a/tests/CoreCLR/runtest/src/dir.props
+++ b/tests/CoreCLR/runtest/src/dir.props
@@ -1,4 +1,4 @@
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="dir.common.props" />
 
   <!-- Disable some standard properties for building our projects -->
