--- a/tests/Test.Common.targets
+++ b/tests/Test.Common.targets
@@ -1,4 +1,4 @@
-<Project ToolsVersion="14.0" DefaultTargets="LinkNative" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="LinkNative" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
     <CopyNuGetImplementations>false</CopyNuGetImplementations>
