--- a/tests/src/Simple/BuildMultiModuleLibraries/BuildMultiModuleLibraries.csproj
+++ b/tests/src/Simple/BuildMultiModuleLibraries/BuildMultiModuleLibraries.csproj
@@ -1,4 +1,4 @@
-<Project ToolsVersion="14.0" DefaultTargets="BuildAllFrameworkLibraries" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="BuildAllFrameworkLibraries" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <Import Project="..\..\..\..\src\BuildIntegration\BuildFrameworkNativeObjects.proj" />
 
