Add natvis that supports strings/arrays Fixup this pointer type handling

--- a/src/ILCompiler/reproNative/reproNative.vcxproj
+++ b/src/ILCompiler/reproNative/reproNative.vcxproj
@@ -99,6 +99,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Native\Bootstrap\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="CoreRTNatVis.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
