Add CLR Thread Pool Gate Thread (#3934)
Added basic Gate Thread Implementation

Change Gate Thread to always run once the ThreadPool has been used once and have it try to add requested worker threads when it wakes up. Removes the state machine and uses a volatile bool instead.

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -653,6 +653,8 @@
     <Compile Include="System\HighPerformanceCounter.Unix.cs" />
     <Compile Include="System\Runtime\InteropServices\PInvokeMarshal.Unix.cs" />
     <Compile Include="System\Threading\ClrThreadPool.cs" />
+    <Compile Include="System\Threading\ClrThreadPool.CpuUtilizationReader.Unix.cs" />
+    <Compile Include="System\Threading\ClrThreadPool.GateThread.cs" />
     <Compile Include="System\Threading\ClrThreadPool.HillClimbing.cs" />
     <Compile Include="System\Threading\ClrThreadPool.HillClimbing.Complex.cs" />
     <Compile Include="System\Threading\ClrThreadPool.ThreadCounts.cs" />
