Fix to GVM resolution bug.
VB can generate calls to GVMs using the signature of a derived type, instead of the type where the GVM is declared (like in C#). Our toolchain/GVM resolution logic could not handle this.

The fix is to detect this and return the declaring method from the JIT interface, and encode its RMH in the GVM lookup (this will have the right declaring type, which will match the way we write the entries in the GVM tables)

[tfs-changeset: 1662438]

--- a/src/System.Private.TypeLoader/src/System.Private.TypeLoader.csproj
+++ b/src/System.Private.TypeLoader/src/System.Private.TypeLoader.csproj
@@ -33,6 +33,7 @@
     <DefineConstants Condition="'$(CCCONVERTER_TRACE)' != ''">CCCONVERTER_TRACE;$(DefineConstants)</DefineConstants>
     <DefineConstants Condition="'$(TYPE_LOADER_TRACE)' != ''">TYPE_LOADER_TRACE;$(DefineConstants)</DefineConstants>
     <DefineConstants Condition="'$(GENERICS_FORCE_USG)' != ''">GENERICS_FORCE_USG;$(DefineConstants)</DefineConstants>
+    <DefineConstants Condition="'$(GVM_RESOLUTION_TRACE)' != ''">GVM_RESOLUTION_TRACE;$(DefineConstants)</DefineConstants>
     <DefineConstants>TYPE_SYSTEM_SINGLE_THREADED;$(DefineConstants)</DefineConstants>
   </PropertyGroup>
   <!-- Setup the right references -->
